--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.4.4",
     "fabric": "~1.6.7",
     "file-saver": "^2.0.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-image-lightbox": "^6.4.0",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
