--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buefy": "^0.8.0",
     "core-js": "^3.4.4",
     "heatmap.js": "^2.0.5",
+    "rxjs": "^6.5.4",
     "vue": "^2.6.10",
     "vue-heatmapjs": "^1.5.0-0"
   },
